# quiz

./: .gitignore  pyproject.toml
quiz/: data.py  data_1.py  main.py  question_model.py  quiz_bank.py  quiz_brain.py  quiz_categories.py  ui.py
