[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["Mark Lopez <cmarklopez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
